tests/baselines/reference/inheritanceMemberAccessorOverridingMethod.errors.txt
==== tests/cases/compiler/inheritanceMemberAccessorOverridingMethod.ts (1 errors) ====
    class a {
        x() {
            return "20";
        }
    }
    
    class b extends a {
          ~
!!! error TS2141: Class 'b' cannot extend class 'a':
!!! 	Class 'b' defines instance member accessor 'x', but extended class 'a' defines it as instance member function.
        get x() {
            return "20";
        }
        set x(aValue: string) {
    
        }
    }